test/should-fail/缺少表达式-1.j
function test takes nothing returns nothing
    local boolean b = true or
endfunction